attempt to fix head wrapping on small screens

--- a/client/src/components/Header/header.module.css
+++ b/client/src/components/Header/header.module.css
@@ -8,6 +8,6 @@
   top: 0;
   z-index: 1000;
 }
- .header h1 {
+ /* .header h1 {
   font-size: 2rem;
- }
+ } */
